<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="tech.wa.moviessample.data.UiState" />
        <import type="android.view.View" />
        <import type="tech.wa.moviessample.presentation.MoviesViewModel" />
        <variable
            name="viewModel"
            type="MoviesViewModel" />
    </data>

    <ScrollView
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/back_button_card_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                app:cardBackgroundColor="@color/salmon"
                app:cardCornerRadius="18dp"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="14dp">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/back_icon"
                        android:scaleType="centerCrop"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_arrow_back"
                        app:tint="@color/white" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/details_title_text_view"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_details"
                app:layout_constraintBottom_toBottomOf="@+id/back_button_card_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.4"
                app:layout_constraintStart_toEndOf="@+id/back_button_card_view"
                app:layout_constraintTop_toTopOf="@+id/back_button_card_view" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_details"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:visibility="@{viewModel.detailsState.state == UiState.State.SUCCESS ? View.VISIBLE : View.GONE, default=gone}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/back_button_card_view">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/movie_poster_card_view"
                    android:layout_width="0dp"
                    android:layout_height="260dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/poster_image_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/poster_image"
                        app:url="@{viewModel.detailsState.data.poster}"
                        tools:srcCompat="@tools:sample/avatars" />

                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:id="@+id/movie_title_text_view"
                    style="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="8dp"
                    android:maxLines="4"
                    android:text="@{viewModel.detailsState.data.title}"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/movie_desc_text_view"
                    app:layout_constraintEnd_toStartOf="@+id/chipGroup"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/movie_poster_card_view"
                    app:layout_constraintVertical_chainStyle="spread_inside"
                    tools:text="Avengers: End Game" />

                <TextView
                    android:id="@+id/movie_desc_text_view"
                    style="@style/TextAppearance.MaterialComponents.Body2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@{viewModel.detailsState.data.plot}"
                    app:layout_constraintEnd_toEndOf="@+id/chipGroup"
                    app:layout_constraintStart_toStartOf="@+id/movie_title_text_view"
                    app:layout_constraintTop_toBottomOf="@+id/movie_title_text_view"
                    tools:text="@string/lorem_ipsum" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chipGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintBottom_toBottomOf="@+id/movie_title_text_view"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/movie_title_text_view">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/movie_year_chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.detailsState.data.type}"
                        tools:text="2020" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/movie_rating_chip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.detailsState.data.rating}"
                        app:chipIcon="@drawable/ic_star"
                        app:chipIconSize="16dp"
                        app:chipIconTint="@color/orange"
                        app:chipStartPadding="8dp"
                        tools:text="8.4" />

                </com.google.android.material.chip.ChipGroup>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <include
                android:id="@+id/include3"
                layout="@layout/state_layout"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:emptyMessage="@{@string/detailsEmptyMessage}"
                app:isEmpty="@{false}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:viewModel="@{viewModel}"
                app:viewStatus="@{viewModel.detailsState}" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>
