<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="tech.wa.moviessample.data.UiState" />
        <import type="android.view.View" />
        <import type="tech.wa.moviessample.presentation.MoviesViewModel" />

        <variable
            name="viewModel"
            type="MoviesViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/back_button_card_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:visibility="invisible"
                app:cardBackgroundColor="@color/salmon"
                app:cardCornerRadius="18dp"
                app:layout_constraintBottom_toTopOf="@+id/search_input_layout"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="14dp">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/back_icon"
                        android:scaleType="centerCrop"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_arrow_back"
                        app:tint="@color/white" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/movies_title_text_view"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_movie_or_show"
                app:layout_constraintBottom_toBottomOf="@+id/back_button_card_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/back_button_card_view" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/search_input_layout"
                style="@style/OutlinedInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false"
                app:boxStrokeWidth="4dp"
                app:endIconDrawable="@drawable/ic_close"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/back_button_card_view">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/search_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_search"
                    android:drawablePadding="4dp"
                    android:drawableTint="@color/black"
                    android:inputType="textNoSuggestions"
                    android:hint="@string/search"
                    android:maxLines="1"
                    android:imeActionId="1"
                    android:imeOptions="actionSearch"
                    android:textStyle="bold" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/search_results_recycler_view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:visibility="@{viewModel.searchResultsState.state == UiState.State.SUCCESS ? View.VISIBLE : View.GONE, default=gone}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/search_input_layout"
                tools:listitem="@layout/item_movie"
                tools:visibility="visible" />

            <include
                android:id="@+id/include2"
                layout="@layout/state_layout"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="32dp"
                app:emptyMessage="@{@string/searchHintMessage}"
                app:isEmpty="@{true}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/search_input_layout"
                app:viewModel="@{viewModel}"
                app:viewStatus="@{viewModel.searchResultsState}" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>